--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "lite": "lite-server",
     "postinstall": "ng build --prod",
     "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
   },
@@ -21,7 +24,7 @@
     "@angular/material": "^12.2.8",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/router": "~12.2.0",    
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
