--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "^12.2.10",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.8",
     "@angular/common": "~12.2.0",
@@ -23,15 +25,13 @@
     "@angular/material": "^12.2.8",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",    
+    "@angular/router": "~12.2.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
     "@angular-devkit/build-angular": "~12.2.3",
-    "@angular/cli": "~12.2.3",
-    "@angular/compiler-cli": "~12.2.0",
     "typescript": "~4.3.5"
   },
   "devDependencies": {    
@@ -42,7 +42,7 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0"    
+    "karma-jasmine-html-reporter": "~1.7.0"
   },
   "engines": {
     "node": "14.17.5",
